--- a/index.html
+++ b/index.html
@@ -1,15 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Revenue ERR SUG notes</title>
+
+    <link href="static/css/foundation.min.css" rel="stylesheet">
+    <link href="static/css/vendor.min.css" rel="stylesheet">
+    <link href="static/css/site.css" rel="stylesheet">
+    <link href="static/css/myDocs.css" rel="stylesheet">
+    <link href="static/css/angular-cookie-law.min.css" rel="stylesheet">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular-sanitize.min.js"></script>
+    <script src="static/angular-cookie-law.min.js"></script>
+
+    <style>
+        .grade {
+            background: -webkit-linear-gradient(135deg, #333, #eee, #333, #eee, #333, #eee, #333, #eee);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        ul {
+            padding-left: 3em;
+        }
+    </style>
+
 </head>
-<body>
-    <h1>Test</h1>
-    <a href="./assets/doc1.pdf" target="_blank">PDF1</a>
-    <br>
-    <a href="./assets/slide1.pptx" target="_blank">SLIDE1</a>
-    <br>
+
+<body data-ng-app="documentation" class="revenue">
+
+    <cookie-law-banner
+        message="By using this website, you consent to the use of cookies in accordance with our privacy policy."
+        policy-url="https://www.revenue.ie/en/online-services/support/data-and-security/privacy/use-of-cookies.aspx"
+        policy-button="true" policy-text="Find out more about cookies." accept-text="Close"></cookie-law-banner>
+
+    <div class="revenue">
+        <div id="top-bar">
+            <div class="row">
+                <div class="small-6 medium-5 large-7 columns logo">
+                    <a class="revenueLogo float-left" title="Home" href="http://www.revenue.ie">
+                        <img alt="revenue-Logo" height="209" width="437" src="static/revenue-Logo-white.png">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="hub-destination-row">
+            <div class="content row">
+                <div class="col-lg-12 col-md-12" id="overview-page">
+                    <div id="overview">
+                        <h2>ERR SUG meeting materials</h2>
+                        </br>
+                        <div>
+                            <p style="line-height: 180%">Here you will find an updated list of materials distributed as
+                                part of our monthly ERR SUG meetings</p>
+
+                            <p>Each section is listed by date, you can:<br />
+                            <ul>
+
+                                <li>View notes from each meeting</li>
+                                <li>Download slides</li>
+                            </ul>
+
+
+                            </p>
+
+                        </div>
+                        <br>
+                        <h2>More text here</h2>
+                        <div>
+                            <p style="line-height: 180%">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book. It has
+                                survived not only five centuries, but also the leap into electronic typesetting,
+                                remaining essentially unchanged. It was popularised in the 1960s with the release of
+                                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                                publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                            </p>
+                        </div>
+                    </div>
+                    <div data-ng-controller="DocumentationController as vm">
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12">
+                                <div id="show-data">
+                                    <!-- Container  -->
+                                    <div data-ng-repeat="(header, data) in vm.data">
+                                        <div class="section-header">
+                                            <a name="{{data.anchor}}" style="text-decoration:none">
+                                                <h3 class="{{data.class}}">Meeting list</h3>
+                                            </a>
+                                        </div>
+                                        <i>
+                                            <div class="col-sm-12" style="padding-left: 0rem !important" ;
+                                                data-ng-if="data.cardText" ng-bind-html="data.cardText"></div>
+                                        </i>
+
+                                        <!--
+                                        <div class="card" data-ng-repeat="document in data.cards track by $index"
+                                            style="font-size: 1.2rem; margin-bottom: 1rem;">
+                                            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-4 col-xxs-4">
+                                                <a data-ng-href="{{document.link}}" target="_blank"
+                                                    data-ng-click="vm.sendData([document.category, document.description])">Link
+                                                    to document</a>
+                                                <sup data-ng-if="document.explainer">
+                                                    summary
+                                                </sup>
+                                            </div>
+                                            <a name="{{document.anchor}}"> </a>
+                                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 col-xxs-2">Time
+                                            </div>
+                                            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 col-xxs-3"
+                                                style="padding: 0rem !important;">date</div>
+                                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 col-xxs-3"
+                                                style="padding left: 0rem !important;">other info
+                                            </div>
+                                        </div>
+                                        -->
+
+                                        
+                                        <div class="card" data-ng-repeat="document in data.cards track by $index"
+                                            style="font-size: 1.2rem; margin-bottom: 1rem;">
+                                            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-4 col-xxs-4">
+                                                <a data-ng-href="{{document.link}}" target="_blank"
+                                                    data-ng-click="vm.sendData([document.category, document.description])">Link
+                                                    to document</a>
+                                                <sup data-ng-if="document.explainer">
+                                                    summary
+                                                </sup>
+                                            </div>
+                                            <a name="{{document.anchor}}"> </a>
+                                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 col-xxs-2">Time
+                                            </div>
+                                            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 col-xxs-3"
+                                                style="padding: 0rem !important;">date</div>
+                                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 col-xxs-3"
+                                                style="padding left: 0rem !important;">other info
+                                            </div>
+                                        </div>
+                                        
+
+
+
+                                        <div data-ng-repeat="document in data.cards track by $index">
+                                            <div class="col-sm-12" style="padding-left: 0rem !important" ;
+                                                data-ng-if="document.sub_hedaing"
+                                                ng-bind-html="vm.generateHTML(document)"></div>
+                                            <i>
+                                                <div class="col-sm-12 pull-left" style="padding-left: 0rem !important" ;
+                                                    data-ng-if="document.explainer"
+                                                    ng-bind-html="vm.generateHTML(document)"></div>
+                                            </i>
+                                            <br /><br />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row support">
+                        <h2>Additional information</h2>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                            galley of type and scrambled it to make a type specimen book. It has survived not only five
+                            centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                            passages, and more recently with desktop publishing software like Aldus PageMaker including
+                            versions of Lorem Ipsum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
