--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                                     data-ng-click="vm.sendData([document.category, document.description])">Link
                                                     to document</a>
                                                 <sup data-ng-if="document.explainer">
-                                                    demo
+                                                    demo 2
                                                 </sup>
                                             </div>
                                             <a name="{{document.anchor}}"> </a>
