--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                   Here you will find an updated list of slides used as part of
                   our monthly ERR SUG meetings
                 </p>
+                <p style="line-height: 180%">
+                  The PAYE Modernisation Web Services documentation can be viewed <a target="_blank" rel="noopener" href="https://revenue-ie.github.io/paye-employers-documentation/" >here</a>.
+                </p>
               </div>
             </div>
             <div>
